Added OneStat and SF.button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
+	{% include external.html %}
       </div>
 
       <div class="footer-col  footer-col-2">
