--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -202,3 +202,15 @@ pre {
         }
     }
 }
+
+
+/* From https://simplesharingbuttons.com/ */
+
+ul.share-buttons{
+  list-style: none;
+  padding: 0;
+}
+
+ul.share-buttons li{
+  display: inline;
+}
