--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,4 +53,11 @@
 
   </div>
 
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'blockattack/Lobby'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+
 </footer>
