--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     </div>
 
     {% include footer.html %}
-
+    <script src="{{ "/js/lightbox-plus-jquery.js" | prepend: site.baseurl }}"></script>
   </body>
 
 </html>
