--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,12 +13,13 @@
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+        {% assign sorted_pages = site.pages | sort:"order" %}
+        {% for node in sorted_pages %}
+          {% if node.title %}
+          <a class="page-link" href="{{ node.url | prepend: site.baseurl }}">{{ node.title }}</a>
           {% endif %}
         {% endfor %}
-	
+
       </div>
     </nav>
 
