--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,9 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-top: 0px solid $grey-color-dark;
+    border-bottom: 0px;
+    margin-top: 3px;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -92,7 +93,7 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
+    border-top: 0px;
     padding: $spacing-unit 0;
 }
 
