Small adjustments. The download button can now be marked while tabbing with the keyboard

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@ $content-width:    960px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+$wrapper-padding:  15px;
 
 
 // Using media queries with like this:
