--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -164,11 +164,11 @@ pre {
     margin-left: auto;
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
-border: 5px solid 	#cc0099;
- border-radius: 15px;
-background-color: #eef;
-padding-top: 15px;
-padding-bottom: 15px;
+    border: 5px solid 	#cc0099;
+    border-radius: $wrapper-padding;
+    background-color: #eef;
+    padding-top: $wrapper-padding;
+    padding-bottom: $wrapper-padding;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
@@ -213,7 +213,7 @@ padding-bottom: 15px;
 }
 
 .download-link {
-    padding: 5px 5px;
+    padding: 2px 5px;
     background: #00CC33;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -233,6 +233,10 @@ color: white;
 }
 .download-link:active {
 color: white;
+}
+.download-link:focus {
+color: white;
+border: solid 2px #20538D;
 }
 
 
