--- a/css/main.scss
+++ b/css/main.scss
@@ -71,3 +71,15 @@ $wrapper-padding:  15px;
     display: table;
     clear: both;
 }
+
+h1 {
+    font-size: 32px;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+h3 {
+    font-size: 16px;
+}
